--- a/BlazorTool.Client/Pages/Login.razor
+++ b/BlazorTool.Client/Pages/Login.razor
@@ -1,4 +1,5 @@
 ﻿@page "/login"
+@using BlazorTool.Client.Models
 @inject NavigationManager Navigation
 @inject BlazorTool.Client.Services.UserState UserState
 @inject BlazorTool.Client.Services.ApiServiceClient ApiServiceClient
@@ -8,7 +9,15 @@
         <h2>Login to the @AppInfo.Name</h2>
         <div class="form-group">
             <label for="username">User name</label>
-            <input id="username" class="form-control" @bind="Username" autocomplete="username" />
+            <TelerikComboBox Data="@Persons"
+                             TextField="Name"
+                             ValueField="Name"
+                             @bind-Value="@Username"
+                             Placeholder="Select or enter user name..."
+                             Filterable="true"
+                             AllowCustom="true"
+                             Width="100%">
+            </TelerikComboBox>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
@@ -26,10 +35,21 @@
     private string Username { get; set; } = string.Empty;
     private string Password { get; set; } = string.Empty;
     private string ErrorMessage { get; set; } = string.Empty;
+    private List<Person> Persons { get; set; } = new List<Person>();
+
+    protected override async Task OnInitializedAsync()
+    {
+        Persons = await ApiServiceClient.GetAllPersons();
+    }
 
     private async Task HandleLogin()
     {
         ErrorMessage = string.Empty;
+        if (string.IsNullOrWhiteSpace(Username) || string.IsNullOrWhiteSpace(Password))
+        {
+            ErrorMessage = "Empty field";
+            return;
+        }
         try
         {
             var loginRequest = new BlazorTool.Client.Models.LoginRequest
@@ -38,7 +58,7 @@
                 Password = Password
             };
 
-        var response = await ApiServiceClient.PostSingleAsync<BlazorTool.Client.Models.LoginRequest, BlazorTool.Client.Models.IdentityData>("api/v1/identity/loginpassword", loginRequest);
+        var response = await ApiServiceClient.PostSingleAsync<LoginRequest, IdentityData>("api/v1/identity/loginpassword", loginRequest);
 
             if (response != null && response.IsValid && response.Data != null)
             {
