fix Auth bugs with 1st server run add userName to log

--- a/BlazorTool.Client/Layout/MainLayout.razor
+++ b/BlazorTool.Client/Layout/MainLayout.razor
@@ -35,6 +35,7 @@
 @code{
 protected override async Task OnInitializedAsync()
     {
+        await UserState.InitializationTask;
         if (!UserState.IsAuthenticated)
         {
             Navigation.NavigateTo("/login");
